--- a/ux/css/main.css
+++ b/ux/css/main.css
@@ -11,7 +11,7 @@ body {
   font-family: 'Lobster';
   font-style: normal;
   font-weight: 400;
-  src: local('Lobster'), url(http://localhost/showcase/ci/ux/fonts/lobster.woff) format('woff');
+  src: local('Lobster'), url(../fonts/lobster.woff) format('woff');
 }
 
 header {
